# setting-up-django-for-success

./: README.md  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  views.py
accounts/api/: views.py
accounts/migrations/: 0001_initial.py  0002_customuser_count.py
my_django_project/: asgi.py  settings.py  urls.py  wsgi.py
my_django_project/settings/: base.py  development.py  production.py
templates/: homepage.html
webapp/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
webapp/src/: main.ts
webapp/src/components/: HelloWorld.vue
